samples for asset elements

--- a/Assets/notebooks/Factsheet_Asset_Environments_Utilities.ipynb
+++ b/Assets/notebooks/Factsheet_Asset_Environments_Utilities.ipynb
@@ -57,8 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U ibm-aigov-facts-client\n",
-    "!pip install -U ibm-watson-machine-learning"
+    "!pip install -U ibm-aigov-facts-client --quiet\n",
+    "!pip install -U ibm-watson-machine-learning --quiet"
    ]
   },
   {
